# MiCASA

./: .README.md.swp  .gitignore  LICENSE  README.md  TODO.md  environment.yml  error.txt  pyproject.toml  requirements.txt  setup.cfg
src/CASA/: .CASA.m.swp  CASA.m  DUMBTHOUGHTS  MiCASA.sh  adjustSoilC.m  avgarea.m  convertCASAmapsClim.m  convertInput.m  convertOutput.m  convertOutput.py  convertOutputs.m  defineArrays.m  defineConstants.m  defineConstants_v0.m  defineConstants_v1.m  defineConstants_vNRT.m  doDefoCarbon.m  doHerbCarbon.m  doLatitude.m  doNPP.m  doRegrCarbon.m  doSoilMoisture.m  doTreeCarbon.m  getFuelWood.m  globarea.m  loadCASAdaily.m  loadCASAinput.m  loadClimInput.m  loadDailyInput.m  makeCASAinputClim.m  makeCASAmapsAnnual.m  makeCASAmapsClim.m  makeClimInput.m  makeGridArea.m  makeNRTburn.m  mask12file.m  maskfile.m  processData.m  saveData.m  setup.sh  (+2 more)
src/CASA/+lofi/: make_3hrly_land.m  make_3hrly_meteo.m  make_sink.m  make_sink_growth.m  make_sink_prep1.m  make_sink_prep2.m  make_sink_temp.m  make_sink_temp_v1.m  setup.m
src/CASA/deprecated/: CASA.m  defineConstants.m  doHerbivory.m  doLeafRootShedding.m  doNPP.m  getFireParams.m  loadCASAinput.m  makeGridArea.m  updateCASAinput.m
src/CASA/post/: README.md  batch.sh  check.sh  cog.sh  cogmake.sh  cogupload.sh  convert.sh  (+5 more)
src/modvir/: __init__.py  __main__.py  build.py  burn.py  config.py  cover.py  geometry.py  getquants.py  list.txt  nrtburn.py  patches.py  utils.py  vegind.py
tests/: burning.m  easternus.m  marbframes.m  marbmovie.sh  mkmovies.m  mkmovies.sh  nrtcheck.m  stdcheck.m
(+76 files in other folders)
