[metadata]
name = MiCASA
version = 0.0.1
author = Brad Weir
author_email = brad.weir@nasa.gov
description = Package for downloading and processing satellite constituent data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/briardew/MiCASA
project_urls =
    Bug Tracker = https://github.com/briardew/MiCASA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    numpy >= 1.18
    pandas >= 1.1
    packaging >= 20.0

[options.packages.find]
where = lib

[options.entry_points]
console_scripts =
    modvir = modvir.__main__:main
